# linux-hw-monitor

./: .gitignore  Cargo.toml  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: release-packages.yml
build-aux/meson/: postinstall.py
data/: io.github.usuario.LinuxHWMonitor.appdata.xml  io.github.usuario.LinuxHWMonitor.desktop  io.github.usuario.LinuxHWMonitor.gschema.xml  io.github.usuario.LinuxHWMonitor.policy  io.github.vitao_al.linux-hw-monitor.appdata.xml  io.github.vitao_al.linux-hw-monitor.desktop  io.github.vitao_al.linux-hw-monitor.gschema.xml  io.github.vitao_al.linux-hw-monitor.policy
flatpak/: io.github.usuario.LinuxHWMonitor.yml  io.github.vitao_al.linux-hw-monitor.yml
helper/: Cargo.toml
helper/src/: main.rs
packaging/aur/: PKGBUILD
packaging/flathub/: FLATHUB_PR_BODY.txt
packaging/rpm/: linux-hw-monitor.spec
packaging/snap/: snapcraft.yaml
po/: POTFILES.in  de.po  es.po  fr.po  it.po  ja.po  ko.po  linux-hw-monitor.pot  meson.build  pt_BR.po  ru.po  zh_CN.po
po/mo/de/LC_MESSAGES/: io.github.vitao_al.linux-hw-monitor.mo
po/mo/es/LC_MESSAGES/: io.github.usuario.LinuxHWMonitor.mo
po/mo/fr/LC_MESSAGES/: io.github.vitao_al.linux-hw-monitor.mo
po/mo/it/LC_MESSAGES/: io.github.vitao_al.linux-hw-monitor.mo
po/mo/ja/LC_MESSAGES/: io.github.usuario.LinuxHWMonitor.mo
po/mo/ko/LC_MESSAGES/: io.github.usuario.LinuxHWMonitor.mo
po/mo/pt_BR/LC_MESSAGES/: io.github.vitao_al.linux-hw-monitor.mo
po/mo/ru/LC_MESSAGES/: io.github.usuario.LinuxHWMonitor.mo
po/mo/zh_CN/LC_MESSAGES/: io.github.vitao_al.linux-hw-monitor.mo
src/: application.rs  config.rs  i18n.rs  lib.rs  main.rs
src/sensors/: battery.rs  cpu.rs  fans.rs  gpu.rs  manager.rs  memory.rs  mod.rs  motherboard.rs  network.rs  storage.rs  types.rs
src/ui/: gauge_widget.rs  graph_widget.rs  mod.rs  sensor_group.rs  sensor_row.rs
src/window/: actions.rs  cpu_overview.rs  formatting.rs  icons.rs  mod.rs  processes.rs  stress.rs  style.rs  window.rs  window.ui
tests/: sensor_manager.rs  ui_smoke.rs
tools/: compile-translations.sh  diagnose.sh  prepare-flathub-pr.sh  quickstart.sh
