[package]
name = "linux-hw-monitor"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
adw = { package = "libadwaita", version = "0.6", features = ["v1_4"] }
gtk4 = "0.8"
glib = "0.19"
gio = "0.19"
tokio = { version = "1.38", features = ["rt-multi-thread", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
nix = { version = "0.29", features = ["fs"] }
gettext-rs = "0.7"

[dev-dependencies]
tempfile = "3"
